--- a/MP3Player/app/src/main/res/layout/activity_details.xml
+++ b/MP3Player/app/src/main/res/layout/activity_details.xml
@@ -10,38 +10,32 @@
         android:layout_height="0dp"
         android:padding="10dp"
         android:layout_weight="5"
-        android:src="@mipmap/ic_cover_background"/>
+        android:src="@mipmap/music_launcher_foreground"/>
+
+    <TextView android:id="@+id/Autor"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="12pt"/>
+
+    <TextView android:id="@+id/Archivo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="8pt"
+        android:paddingLeft="20dp"/>
 
     <SeekBar android:id="@+id/sbProgress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:padding="10dp"
-        android:orientation="horizontal">
+    <ImageButton android:id="@+id/imgButton"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_gravity="center"
+        />
 
-        <Button android:id="@+id/btnAudio1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Audio 1" />
 
-        <Button android:id="@+id/btnAudio2"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Audio 2" />
 
-        <Button android:id="@+id/btnAudio3"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Audio 3" />
 
-    </LinearLayout>
 
 </LinearLayout>
