--- a/GalleryDemo/app/src/main/res/layout/activity_saving.xml
+++ b/GalleryDemo/app/src/main/res/layout/activity_saving.xml
@@ -17,7 +17,7 @@
         android:layout_height="0dp"
         android:layout_weight="3"
         android:padding="5dp"
-        android:src="@drawable/a3_26" />
+        />
 
     <Button
         android:id="@+id/btnSave"
@@ -25,6 +25,6 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:padding="5dp"
-        android:text="Save" />
+        android:text="Take Photo" />
 
 </LinearLayout>
